<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>SqlEight</name>
    <description>Simple JDBC patterns written in Java 8 idioms</description>
    <url>http://github.com/onlyleft/sqleight</url>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.8.3.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <groupId>com.onlyleft</groupId>
    <artifactId>sqleight</artifactId>
    <version>1.0-SNAPSHOT</version>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Jared Teems</name>
            <email>jared.teems@adjenti.com</email>
            <organizationUrl>http://github.com/onlyleft</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/onlyleft/sqleight.git</connection>
        <developerConnection>scm:git:ssh://github.com:onlyleft/sqleight.git</developerConnection>
        <url>https://github.com/onlyleft/sqleight</url>
    </scm>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


</project>